<resources>
    <string name="app_name">Demo</string>
    <string name="movie_rating">Movie Rating</string>
    <string name="hello_guys">Hello Arvind!</string>
    <string name="check_for_latest_addition">Check for latest addition</string>
    <string name="filters">Filters</string>
    <string name="genre">Genre</string>
    <string name="top_imdb">Top IMDB</string>
    <string name="watched">Watched</string>
    <string name="feature_today">Feature Today</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>