<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context=".ui.MovieDashFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/hello_guys"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:text="@string/check_for_latest_addition"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bgcard"
        android:paddingHorizontal="18dp"
        android:paddingVertical="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/subTitle"
        app:layout_constraintTop_toBottomOf="@+id/subTitle">

        <ImageView
            android:id="@+id/ic_search"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/check_for_latest_addition"
            app:layout_constraintBottom_toBottomOf="@+id/ic_search"
            app:layout_constraintStart_toEndOf="@+id/ic_search"
            app:layout_constraintTop_toTopOf="@+id/ic_search" />

        <View
            android:id="@+id/vDivider"
            android:layout_width="1.2dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/ic_search"
            app:layout_constraintEnd_toStartOf="@+id/icVoice"
            app:layout_constraintTop_toTopOf="@+id/ic_search"


            />

        <ImageView
            android:id="@+id/icVoice"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_mic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/cvSearch"
        app:layout_constraintTop_toBottomOf="@+id/cvSearch"
        android:layout_marginTop="30dp"
        android:text="@string/filters"
        android:textSize="18sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/filtering"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"


        app:layout_constraintTop_toBottomOf="@+id/tvFilter"
        app:layout_constraintStart_toStartOf="@+id/cvSearch"
        app:layout_constraintEnd_toEndOf="@+id/cvSearch">

        <androidx.cardview.widget.CardView
            android:id="@+id/cGen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_weight="0.25"
            android:layout_marginEnd="25dp"
            app:cardBackgroundColor="#EDEDED">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginVertical="16dp"
                android:src="@drawable/ic_gener"
                android:layout_gravity="center"
                app:tint="@color/black" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cTopImdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#EDEDED"
            android:layout_marginEnd="25dp"

            app:cardCornerRadius="10dp"
            android:layout_weight="0.25"

            app:layout_constraintTop_toTopOf="@+id/cGen">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="12dp"
                android:src="@drawable/ic_fav"
                app:tint="@color/black" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cTopImdp1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_weight="0.25"
            android:layout_marginEnd="25dp"

            app:cardBackgroundColor="#EDEDED">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"

                android:layout_marginHorizontal="12dp"
                android:src="@drawable/ic_recenet"
                app:tint="@color/black" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cTopImd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#EDEDED"
            android:layout_weight="0.25"

            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="12dp"
                android:src="@drawable/ic_watched"
                app:tint="@color/black" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/filtering2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@+id/filtering"
        app:layout_constraintStart_toStartOf="@+id/cvSearch"
        app:layout_constraintEnd_toEndOf="@+id/cvSearch">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="@string/genre"
            app:layout_constraintBottom_toBottomOf="@+id/ic_search"
            app:layout_constraintStart_toEndOf="@+id/ic_search"
            app:layout_constraintTop_toTopOf="@+id/ic_search" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="@string/top_imdb"
            app:layout_constraintBottom_toBottomOf="@+id/ic_search"
            app:layout_constraintStart_toEndOf="@+id/ic_search"
            app:layout_constraintTop_toTopOf="@+id/ic_search" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="Recent"

            app:layout_constraintBottom_toBottomOf="@+id/ic_search"
            app:layout_constraintStart_toEndOf="@+id/ic_search"
            app:layout_constraintTop_toTopOf="@+id/ic_search" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/watched"
            app:layout_constraintBottom_toBottomOf="@+id/ic_search"
            app:layout_constraintStart_toEndOf="@+id/ic_search"
            app:layout_constraintTop_toTopOf="@+id/ic_search" />


    </LinearLayout>


    <TextView
        android:id="@+id/tvFeature"
        android:layout_width="0dp"
        android:layout_weight="0.25"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/feature_today"
        app:layout_constraintStart_toStartOf="@+id/filtering2"
        app:layout_constraintTop_toBottomOf="@+id/filtering2" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFeature" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>